# ConvCubesGl

./: .gitignore  CMakeLists.txt
include/: cube.h  shader.h
include/glad/: glad.h
scripts/: generate_layer_imgs.py
shaders/: basic_vertex.shader  fragment.shader  vertex.shader
src/: cube.cpp  glad.c  main.cpp
